# cxx_inheritance

./: CMakeLists.txt  class_inheritance.cpp
